--- a/package.json
+++ b/package.json
@@ -8,8 +8,12 @@
     "react-dom": "^16.8.0-alpha.1"
   },
   "devDependencies": {
+    "babel-eslint": "^10.0.1",
     "eslint": "^5.12.1",
     "eslint-config-prettier": "^4.0.0",
+    "eslint-plugin-import": "^2.15.0",
+    "eslint-plugin-jsx-a11y": "^6.2.0",
+    "eslint-plugin-react": "^7.12.4",
     "parcel-bundler": "^1.11.0",
     "prettier": "^1.16.1"
   },
