--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "the Complete Intro to React, v5",
   "main": "src/App.js",
   "dependencies": {
+    "@reach/router": "^1.2.1",
     "petfinder-client": "^0.0.3",
     "react": "^16.8.0-alpha.1",
     "react-dom": "^16.8.0-alpha.1"
@@ -27,5 +28,16 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Brian Holt <btholt+complete-intro-to-react@gmail.com>",
-  "license": "Apache-2.0"
+  "license": "Apache-2.0",
+  "browserslist": [
+    "last 2 Chrome versions",
+    "last 2 ChromeAndroid versions",
+    "last 2 Firefox versions",
+    "last 2 FirefoxAndroid versions",
+    "last 2 Safari versions",
+    "last 2 iOS versions",
+    "last 2 Edge versions",
+    "last 2 Opera versions",
+    "last 2 OperaMobile versions"
+  ]
 }
